--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,16 +7,16 @@
       <script src="js/lib/fronty.js"></script>
       <!-- user code -->
       <script src="templates/helpers.js"></script>
-      <script src="js/model/post.js"></script>
-      <script src="js/model/posts.js"></script>
+      <script src="js/model/expense.js"></script>
+      <script src="js/model/expenses.js"></script>
       <script src="js/model/user.js"></script>
-      <script src="js/service/postsservice.js"></script>
+      <script src="js/service/expensesservice.js"></script>
       <script src="js/service/userservice.js"></script>
       <script src="js/component/maincomponent.js"></script>
-      <script src="js/component/postscomponent.js"></script>
-      <script src="js/component/postviewcomponent.js"></script>
-      <script src="js/component/postaddcomponent.js"></script>
-      <script src="js/component/posteditcomponent.js"></script>
+      <script src="js/component/expensescomponent.js"></script>
+      <script src="js/component/expenseviewcomponent.js"></script>
+      <script src="js/component/expenseaddcomponent.js"></script>
+      <script src="js/component/expenseeditcomponent.js"></script>
       <script src="js/component/logincomponent.js"></script>
 
       <script src="js/i18n/I18n.js"></script>
