--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,18 @@
       <link rel="stylesheet" href="css/style.css"></link>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
+      
+      <!-- charts stuff -->
+      <script src="https://code.highcharts.com/highcharts.js"></script>
+      <script src="https://code.highcharts.com/modules/exporting.js"></script>
+      <script src="https://code.highcharts.com/modules/export-data.js"></script>
+      <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
+
       <script src="js/lib/fronty.js"></script>
       <!-- user code -->
       <script src="templates/helpers.js"></script>
+      <script src="js/model/counter.js"></script>
       <script src="js/model/expense.js"></script>
       <script src="js/model/expenses.js"></script>
       <script src="js/model/user.js"></script>
@@ -18,6 +27,7 @@
       <script src="js/component/expenseaddcomponent.js"></script>
       <script src="js/component/expenseeditcomponent.js"></script>
       <script src="js/component/logincomponent.js"></script>
+      <script src="js/component/expensechartcomponent.js"></script>
 
       <script src="js/i18n/I18n.js"></script>
 
