--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
       <script src="js/lib/fronty.js"></script>
       <!-- user code -->
       <script src="templates/helpers.js"></script>
-      <script src="js/model/counter.js"></script>
+      <script src="js/model/charts.js"></script>
       <script src="js/model/expense.js"></script>
       <script src="js/model/expenses.js"></script>
       <script src="js/model/user.js"></script>
